force-app/main/default/objects/Animal360_Indicator_Definition__mdt/Animal360_Indicator_Definition__mdt.object-meta.xml
<CustomObject>
    <description
  >Packaged indicator catalogue used for runtime assessment rendering and persistence.</description>
    <label>Animal360 Indicator Definition</label>
    <pluralLabel>Animal360 Indicator Definitions</pluralLabel>
</CustomObject>