force-app/main/default/objects/Animal360_Indicator_Definition__mdt/fields/Domain_Code__c.field-meta.xml
<CustomField>
    <fullName>Domain_Code__c</fullName>
    <description
  >Domain code associated with the indicator definition.</description>
    <label>Domain Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>