force-app/main/default/objects/Animal360_Indicator_Definition__mdt/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description
  >Stable indicator key used in template assignments and observations.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>