force-app/main/default/objects/Animal360_Indicator_Definition__mdt/fields/Indicator_Label__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Label__c</fullName>
    <description>User-facing label for the indicator.</description>
    <label>Indicator Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>