force-app/main/default/objects/Animal360_Indicator_Definition__mdt/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <description>Primary runtime value type for the indicator.</description>
    <label>Value Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>